# my-lms

./: README.md
lms_api/: Cargo.toml
lms_api/migrations/2023-03-17-175856_create_user/: up.sql
lms_api/src/: error.rs  schema.rs
lms_api/src/api/: auth.rs
lms_api/src/api/guards/: auth_guards.rs  mod.rs
lms_api/src/db/: auth.rs  mod.rs
lms_api/src/utils/: mod.rs
todo_api/: .env  Cargo.toml  Rocket.toml
todo_api/src/: main.rs
todo_api/src/api/: auth.rs  mod.rs  view_models.rs
todo_api/src/api/guards/: auth_guards.rs
todo_api/src/db/: auth.rs  conn.rs
todo_api/src/utils/: hashing.rs
