[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
tokio = { version = "1.18.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
surrealdb = "1.0.0-beta.8"
thiserror = "1.0"
sha3 = "0.10.6"
hex = "0.4.3"
log = "0.4"
fern = "0.6.1"