[package]
name = "todo_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
tokio = { version = "1.18.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
sha3 = "0.10.6"
hex = "0.4.3"
log = "0.4"
fern = "0.6.1"
diesel = { version = "2.0.0", features = ["postgres", "uuid"] }
dotenvy = "0.15"
postgres = { version = "0.19.4" }
uuid = { version = "1.3.0", features = ["serde", "v4"] }


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_postgres_pool"]